# llmcord

./: .gitattributes  .gitignore  Dockerfile  README.md  config-example.yaml  docker-compose.yaml  llmcord.bat  llmcord.py  main.py  pyproject.toml  requirements.txt  starter.bat
config/: config-example.yaml  config.default.yaml
docs/: README.md
llmcord/: __main__.py  bot.py  commands_manager.py  config_manager.py  discord_utils.py  llm_tools.py  llm_utils.py  logging_utils_.py  message_service.py  regex_utils.py
src/: bot.py  commands.py  commands_manager.py  config.py  config_manager.py  custom_types.py  discord_service.py  discord_utils.py  llm_service.py  llm_tools.json  llm_tools.py  llm_utils.py  logger.py  logging_utils_.py  message_processor.py  message_service.py  message_utils.py  models.py  regex_utils.py  time_utils.py  tools.py  utils.py  utils_discord.py  utils_logging.py  utils_regex.py
